--- a/style.css
+++ b/style.css
@@ -5,8 +5,18 @@ font-family: 'Times New Roman';
 color: white;
 }
 
-ul{ margin: 0px
- padding: 0px;
-list-style: none;
+ul{ margin: 0px;
 }
-
+ul li{
+    float: left;
+    width: 200px;
+    height: 40px;
+    background-color: black;
+    text-align: center;
+    font-size: 20px;
+}
+ul li a{
+    text-decoration: none;
+    color: white;
+    display: block;
+}
